[package]
name = "merwyn"
version = "0.1.0-devel"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = []
gpu = []

#[dev-dependencies]

[dependencies]
envy = "^0.3"
fixedbitset = "^0.1"
lazycell = "^1.2"
#lazy_static = "*"
#num-traits = "^0.2"
#parking_lot = { version = "*", features = ["nightly"] }
#plex = "*"
#plex = { path = "../plex", default-features = false, features = ["lexer"] }
#plex = { git = "https://github.com/goffrie/plex", rev = "a4c1068fc31293b209677f6347aa51bbf73c1e53", default-features = false, features = ["lexer"] }
plex = { version = "~0.2.4", default-features = false, features = ["lexer"] }
rand = "^0.6"
rand_chacha = "^0.1"
rdrand = "^0.5"
#rearray = { path = "../rearray" }
rpds = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
termion = "^1.5"
#vertreap = { path = "../vertreap" }
vertreap = "^0.1.0-pre.0"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "merwyne"
path = "tools/merwyne.rs"

[[bin]]
name = "merwyni"
path = "tools/merwyni.rs"
