[package]
name = "merwyn"
version = "0.1.0-devel"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[profile.dev]
#codegen-units = 1
#incremental = true
panic = "abort"

[profile.release]
#codegen-units = 1
#incremental = true
panic = "abort"

[features]
default = []
xgpu = ["kuda", "objrs", "objrs_frameworks_foundation"]

#[dev-dependencies]

[dependencies]
libc = "^0.2"
#num-traits = "^0.2"
#plex = { git = "https://github.com/goffrie/plex", rev = "a4c1068fc31293b209677f6347aa51bbf73c1e53", default-features = false, features = ["lexer"] }
#plex = { version = "~0.2.5", default-features = false, features = ["lexer"] }
plex = { path = "third_party/plex" }
rand_core = "^0.5"
#rearray = { path = "../rearray" }
#rpds = "^0.6"
#serde = "^1.0"
#serde_derive = "^1.0"
#termion = "^1.5"

[target.'cfg(target_os = "linux")'.dependencies]
kuda = { path = "third_party/kuda", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objrs = { path = "third_party/objrs", optional = true }
objrs_frameworks_foundation = { path = "third_party/objrs/frameworks/foundation", optional = true }

#[lib]
#crate-type = ["lib", "cdylib"]

#[[bin]]
#name = "merwyne"
#path = "tools/merwyne.rs"

[[bin]]
name = "merwyni"
path = "tools/merwyni.rs"
